Fix infographic embed overflow

--- a/src/app/globals-embed.css
+++ b/src/app/globals-embed.css
@@ -6,7 +6,7 @@
 html {
   height: 100%;
   background: transparent !important;
-  overflow: auto;
+  overflow: hidden;
 }
 
 body {
@@ -17,7 +17,7 @@ body {
   background-color: transparent !important;
   background-attachment: initial !important;
   min-height: 100%;
-  overflow: auto;
+  overflow: hidden;
 }
 
 /* Remove the gradient pseudo-element */
